--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "frontend",
- 
+    "homepage": "https://voilaanwi1.github.io/dreamfrontend",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -11,6 +11,7 @@
         "gh-pages": "^6.1.1",
         "query-string": "^8.1.0",
         "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
         "react-router": "^6.21.3",
         "react-router-dom": "^6.21.3",
@@ -27,7 +28,8 @@
         "npm": "6.14.15"
     },
     "scripts": {
-        
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
